# secureiptv

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
player/: __init__.py  category_tab.py  channel_list.py  channel_model.py  fullscreen_window.py  m3u_parser.py  main_window.py  playlist_loader.py  seek_slider.py  vlc_player.py
tests/: test_parser.py
