[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "secureiptv"
version = "1.0.0"
description = "A secure, open-source IPTV desktop player"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["iptv", "m3u", "m3u8", "player", "vlc", "pyqt6", "streaming"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "PyQt6>=6.4.0",
    "python-vlc>=3.0.18128",
]

[project.urls]
Homepage = "https://github.com/logitacher/secureiptv"
Issues   = "https://github.com/logitacher/secureiptv/issues"
Security = "https://github.com/logitacher/secureiptv/security/advisories"

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v"
